[project]
name = "md_exporter"
version = "3.0.0"
description = "Convert markdown text to files in various formats such as DOCX, XLSX, PDF, PPTX, and images."
requires-python = ">=3.11"
authors = [
    { name = "bowenliang123", email = "liang.bowen.123@qq.com" },
]

dependencies = [
    "dify_plugin~=0.7.1",
    "markdown>=3.10",
    "pandas[excel,html,xml]~=2.3.3",
    "xhtml2pdf~=0.2.17",
    "python-pptx~=1.0.2",
    "PyMuPDF~=1.26.4",
    "pillow~=12.0.0",
    "pypandoc-binary~=1.16.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.ruff]
exclude = ["md2pptx-6.1.1"]

[tool.ruff.lint]
select = [
    "I",
    "UP",
    "F401",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["dev", "provider", "test", "test_output"]

[tool.setuptools.package-data]
"*" = ["assets/template/docx_template.docx", "assets/template/pptx_template.pptx"]
