[project]
name = "md-exporter"
version = "3.6.0"
description = "An Agent Skill and Dify plugin to Convert markdown text into files in various formats such as DOCX, XLSX, PDF, PPTX and images."
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "bowenliang123", email = "liang.bowen.123@qq.com" },
]
readme = "README.md"

dependencies = [
    "markdown>=3.10.2",
    "pandas[excel,html,xml]~=3.0.1",
    "xhtml2pdf~=0.2.17",
    "PyMuPDF~=1.26.7",
    "pillow~=12.1.0",
    "pypandoc-binary~=1.16.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
dify = [
    "dify_plugin~=0.7.1",
]

[project.urls]
Homepage = "https://github.com/bowenliang123/md_exporter/"
Repository = "https://github.com/bowenliang123/md_exporter.git"
Issues = "https://github.com/bowenliang123/md_exporter/issues"
Changelog = "https://github.com/bowenliang123/md_exporter/?tab=readme-ov-file#-changelog"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "scripts"
module-root = ""

[tool.uv.build-backend.includes]
assets = "assets/"
assets_template = "assets/template/"

[project.scripts]
markdown-exporter = "scripts.cli:main"
